@@ -2,6 +2,15 @@
 
         Build fix, not reviewed.
 
+        More Windows build fixes for https://bugs.webkit.org/show_bug.cgi?id=29943
+
+        * platform/network/cf/ResourceHandleCFNet.cpp:
+        (WebCore::willSendRequest):
+
+2009-09-30  Maciej Stachowiak  <mjs@apple.com>
+
+        Build fix, not reviewed.
+
         Fix windows build for fix for https://bugs.webkit.org/show_bug.cgi?id=29943
 
         * platform/network/cf/ResourceHandleCFNet.cpp:
